[gd_scene load_steps=4 format=2]

[ext_resource path="res://Room_Normal.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=1]
vertex_color_use_as_albedo = true
albedo_color = Color( 0.337255, 0.243137, 0, 1 )
metallic = 0.31

[sub_resource type="Environment" id=2]

[node name="Room_Normal" type="Spatial"]
script = ExtResource( 1 )

[node name="Floor" type="CSGBox" parent="."]
width = 8.0
height = 0.1
depth = 8.0
material = SubResource( 1 )

[node name="Wall" type="CSGBox" parent="."]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -4, 2, 0 )
width = 4.1
height = 0.1
depth = 8.1
material = SubResource( 1 )

[node name="Wall2" type="CSGBox" parent="."]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 4, 2, 0 )
visible = false
width = 4.1
height = 0.1
depth = 8.1
material = SubResource( 1 )

[node name="Wall3" type="CSGBox" parent="."]
transform = Transform( 1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 0, 2, 4 )
width = 4.1
height = 0.1
depth = 8.1
material = SubResource( 1 )

[node name="Wall4" type="CSGBox" parent="."]
transform = Transform( 1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 0, 2, -4 )
width = 4.1
height = 0.1
depth = 8.1
material = SubResource( 1 )

[node name="Ceiling" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0 )
width = 8.0
height = 0.1
depth = 8.0
material = SubResource( 1 )

[node name="OmniLight3" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 3.1, -3 )
light_color = Color( 0.988235, 0.545098, 0.545098, 1 )
light_energy = 2.5
light_specular = 0.48

[node name="OmniLight5" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.34067, 3.1, -0.164164 )
light_color = Color( 0.988235, 0.545098, 0.545098, 1 )
light_energy = 2.5
light_specular = 0.48

[node name="OmniLight4" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.7, 3.1, 2.8 )
light_color = Color( 0.988235, 0.545098, 0.545098, 1 )
light_energy = 2.5
light_specular = 0.48

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )
